--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -223,175 +223,10 @@ a:hover {
 
 @media only screen and (max-width: 600px) {
     /* Style adjustments for viewports that meet the condition */
-    #nav {
-        display: none;
-    }
-
-    #mobile-nav {
-        display: block;
-    }
-
-    .lum-gallery-button {
-        display: none !important;
-    }
-
-    #left {
-        display: block;
-        width: 100%;
-        height: 50%;
-        position: fixed;
-        background-image: url('data:image/gif;base64,R0lGODlhAQABAIAAAP///////yH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==');
-        background-size: cover;
-    }
-
-    #right {
-        display: block;
-        width: 100%;
-        height: 50%;
-        top: 50%;
-        position: fixed;
-        background-image: url('data:image/gif;base64,R0lGODlhAQABAIAAAP///////yH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==');
-        background-size: cover;
-    }
-
-    #artist-panel,
-    #exhibition-panel {
-        display: none;
-    }
-
-    #contact-left {
-        display: block;
-        position: relative;
-        width: 90%;
-    }
-
-    #contact-right {
-        display: block;
-        position: relative;
-        width: 90%;
-        padding-top: 20px;
-        padding-bottom: 20px;
-    }
-
-    #contact-right img {
-        width: 100%;
-    }
-
-    #map {
-        width: 100%;
-        display: block;
-        padding-top: 20px;
-    }
-
-    h3 {
-        margin-bottom: 0;
-    }
-
-    .date-row td {
-        background-color: none !important;
-    }
-
-    #exhibitions tr td:last-child {
-        padding-bottom: 25px;
-    }
-
-    #exhibitions tr td {
-        display: block;
-    }
-
-    #artist-news tr td {
-        display: inline-block;
-    }
-
-    #artist-news h3 {
-        padding-bottom: 25px;
-    }
-
-    #artist-exhibitions h3 {
-        padding-bottom: 25px;
-    }
-
-    #artist-exhibitions tr td:last-child {
-        padding-bottom: 25px;
-    }
-
-    #artist-exhibitions td {
-        display: block;
-    }
-
-    #artist-names {
-        display: block;
-        width: 100%;
-    }
-
-    #exhibition-gallery {
-        margin-top: 25px;
-    }
-
-    #press-release {
-        margin-top: 25px;
-        width: 85%;
-    }
-
-    #news tr td:last-child {
-        padding-bottom: 25px;
-    }
-
-    #fairs tr td:last-child {
-        padding-bottom: 25px;
-    }
-
-    #fairs tr td {
-        display: block;
-    }
-
-    #artist-bio br {
-        display: block;
-        margin: 2.5px 0;
-    }
-
-    #artist-bio h3 {
-        margin-bottom: 15px;
-        margin-top: 25px;
-    }
-
-    #artist-bio-left {
-        display: block;
-        width:90%;
-        position: relative;
-        float: left;
-        padding-bottom: 0px;
-    }
-
-    #artist-bio-right {
-        display: block;
-        width:90%;
-        position: relative;
-        float: left;
-        padding-bottom: 20px;
-    }
-
-    #artist-gallery {
-        margin-top: 25px;
-    }
-
-    .carousel {
-        width: calc(100% + 60px);
-        margin-left: -30px;
-        margin-bottom: 35px;
-    }
-
-    .carousel img {
-        height: 150px;
-    }
-
-    .install-image {
-        padding-right: 10px;
-    }
-
-    .fancybox__nav {
-        display: none !important;
-    }
+    #logo-svg {
+    width: 90%;
+    height: auto;
+}
 
 }
 
