--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -105,10 +105,11 @@ html {
 a {
     text-decoration: none;
     color: #fff;
+    transition: 200ms;
 }
 
 a:hover {
-    border-bottom: 1px solid #fff;
+    color: #000;
 }
 
 #splash {
@@ -121,6 +122,7 @@ a:hover {
 }
 
 #logo-svg {
+    margin-top: -2%;
     margin-left: -5%;
     width: 40%;
     height: auto;
@@ -128,6 +130,7 @@ a:hover {
 
 #contact {
     font-size: 1.5em;
+    padding-top: 2%;
 }
 
 /* ==========================================================================
